plugins {
    id 'java'
    id 'application'
}

mainClassName = 'com.liquidforte.adventure.main.Main'

applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']

repositories {
    mavenCentral()
    jcenter()
    google()
}

dependencies {
	implementation 'com.google.guava:guava:28.2-jre'
	implementation 'com.google.inject:guice:4.2.2'

    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.14.0'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.0'
    
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.2.4'
}

sourceCompatibility = 12

test {
    useJUnitPlatform()
    
    // TODO: We shouldn't run guice in tests?
    jvmArgs = applicationDefaultJvmArgs
}